--- a/page_analyzer/templates/show.html
+++ b/page_analyzer/templates/show.html
@@ -13,27 +13,34 @@
         <div><a href="{{ url_for('get_urls') }}">Сайты</a></div>
       </nav>
     </header>
+    {% if messages %}
+    <div class="flashes">
+      {% for category, message in messages %}
+      <div class="alert alert-{{ category }}" role="alert">
+        {{ message }}
+      </div>
+      {% endfor %}
+    </div>
+    {% endif %}
     <main>
-      <div class="conrainer">
-        <h1>Сайты</h1>
+      <div class="container">
+        <h1>Сайт: {{ site.name }}</h1>
         <div class="table">
-          <table data-test="urls">
-            <th>
-              <tr>
-                  <td>ID</td>
-                  <td>Имя</td>
-                  <td>Последняя проверка</td>
-                  <td>Код ответа</td>
-              </tr>
-            </th>
-            {% for site in sites %}
+          <table data-test="url">
+            <tbody>
             <tr>
-                <td>{{ site.id }}</td>
-                <td><a href="{{ url_for('get_site', id=site.id) }}">{{ site.name }}</a></td>
-                <td>--</td>
-                <td>--</td>
+              <td>ID</td>
+              <td>{{ site.id }}</td>
             </tr>
-            {% endfor %}
+            <tr>
+              <td>Имя</td>
+              <td>{{ site.name }}</td>
+            </tr>
+            <tr>
+              <td>Дата создания</td>
+              <td>{{ site.created_at }}</td>
+            </tr>
+            </tbody>
           </table>
         </div>
       </div>
