--- a/page_analyzer/templates/main.html
+++ b/page_analyzer/templates/main.html
@@ -22,7 +22,7 @@
       <h1></h1>
       <div class="container">
         <div class="row">
-          <div class="col-md-12" style="background-color: #dee2e6">
+          <div class="col-md-12 rounded-2" style="background-color: #dee2e6">
             <h1 class="text-center">Анализатор страниц</h1>
             <p class="text-center">Бесплатно проверяйте сайты на SEO-пригодность</p>
             <form action="/urls" class="text-center" method="post">
