--- a/page_analyzer/templates/main.html
+++ b/page_analyzer/templates/main.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <header class="header" style="background-color: #212529">
-      <nav>
-        <a class="navbar" href="{{ url_for('get_main_page') }}">Анализатор страниц</a>
-        <div><a href="{{ url_for('get_urls') }}">Сайты</a></div>
+      <nav class="navbar navbar-expand-md navbar-dark px-3">
+        <a class="navbar-brand" href="{{ url_for('get_main_page') }}">Анализатор страниц</a>
+        <div><a class="navbar-nav nav-link" href="{{ url_for('get_urls') }}">Сайты</a></div>
       </nav>
     </header>
     {% if error %}
