--- a/page_analyzer/templates/show.html
+++ b/page_analyzer/templates/show.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <header class="header" style="background-color: #212529">
-      <nav>
-        <a class="navbar" href="{{ url_for('get_main_page') }}">Анализатор страниц</a>
-        <div><a href="{{ url_for('get_urls') }}">Сайты</a></div>
+      <nav class="navbar navbar-expand-md navbar-dark px-3">
+        <a class="navbar-brand" href="{{ url_for('get_main_page') }}">Анализатор страниц</a>
+        <div><a class="navbar-nav nav-link" href="{{ url_for('get_urls') }}">Сайты</a></div>
       </nav>
     </header>
     {% if messages %}
@@ -24,7 +24,7 @@
     {% endif %}
     <main>
       <div class="container">
-        <h1>Сайт: {{ site.name }}</h1>
+        <h1 class="mt-3 mb-3">Сайт: {{ site.name }}</h1>
         <div class="table">
           <table data-test="url">
             <tbody>
@@ -43,6 +43,7 @@
             </tbody>
           </table>
         </div>
+        <h2 class="mt-5 mb-3">Проверки</h2>
       </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
