--- a/page_analyzer/templates/main.html
+++ b/page_analyzer/templates/main.html
@@ -20,14 +20,14 @@
     {% endif %}
     <main>
       <h1></h1>
-      <div class="container">
+      <div class="container-lg mt-3">
         <div class="row">
-          <div class="col-md-12 rounded-2" style="background-color: #dee2e6">
-            <h1 class="text-center">Анализатор страниц</h1>
-            <p class="text-center">Бесплатно проверяйте сайты на SEO-пригодность</p>
-            <form action="/urls" class="text-center" method="post">
-              <input type="text" class="rounded-2 " name="url" placeholder="https://www.example.com">
-              <input type="submit" class="rounded-2 border-primary" style="background-color: #0d6efd" value="ПРОВЕРИТЬ">
+          <div class="col-12 col-md-10 col-lg-8 mx-auto border rounded-3 bg-light p-5" style="background-color: #dee2e6">
+            <h1 class="display-3 text-center">Анализатор страниц</h1>
+            <p class="lead text-center">Бесплатно проверяйте сайты на SEO-пригодность</p>
+            <form action="/urls" class="d-flex justify-content-center" method="post">
+              <input type="text" class="form-control form-control-lg " name="url" placeholder="https://www.example.com">
+              <input type="submit" class="btn btn-primary  btn-lg ms-3 px-5 text-uppercase mx-3" style="background-color: #0d6efd" value="ПРОВЕРИТЬ">
             </form>
           </div>
         </div>
