--- a/page_analyzer/templates/show.html
+++ b/page_analyzer/templates/show.html
@@ -6,7 +6,7 @@
     <title>Анализатор страниц</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
-  <body>
+  <body class="min-vh-100 d-flex flex-column">
     <header class="header" style="background-color: #212529">
       <nav class="navbar navbar-expand-md navbar-dark px-3">
         <a class="navbar-brand" href="{{ url_for('get_main_page') }}">Анализатор страниц</a>
@@ -23,10 +23,10 @@
     </div>
     {% endif %}
     <main>
-      <div class="container">
-        <h1 class="mt-3 mb-3">Сайт: {{ site.name }}</h1>
-        <div class="table">
-          <table data-test="url">
+      <div class="container-lg mt-3">
+        <h1>Сайт: {{ site.name }}</h1>
+        <div class="table-responsive">
+          <table data-test="url" class="table table-bordered table-hover text-nowrap">
             <tbody>
             <tr>
               <td>ID</td>
@@ -44,6 +44,26 @@
           </table>
         </div>
         <h2 class="mt-5 mb-3">Проверки</h2>
+        <form method="post" action="/urls/{{ site.id }}/checks">
+          <input type="submit" class="btn btn-primary" value="Запустить проверку">
+        </form>
+        <div>
+          <table class="table table-bordered table-hover mt-2" data-test="checks">
+            <thead>
+              <tr>
+                <th>ID</th>
+                <th>Код ответа</th>
+                <th>h1</th>
+                <th>title</th>
+                <th>description</th>
+                <th>Дата создания</th> 
+              </tr>
+            </thead>
+            <tbody>
+            
+            </tbody>
+          </table>
+        </div>
       </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
