--- a/page_analyzer/templates/show.html
+++ b/page_analyzer/templates/show.html
@@ -60,7 +60,16 @@
               </tr>
             </thead>
             <tbody>
-            
+            {% for check in checks %}
+              <tr>
+                <td>{{ check.id }}</td>
+                <td>{{ check.status_code }}</a></td>
+                <td>{{ check.h1 }}</td>
+                <td>{{ check.title }}</td>
+                <td>{{ check.description }}</td>
+                <td>{{ check.created_at }}</td>
+              </tr>
+            {% endfor %}
             </tbody>
           </table>
         </div>
