--- a/page_analyzer/templates/show.html
+++ b/page_analyzer/templates/show.html
@@ -45,7 +45,7 @@
         </div>
         <h2 class="mt-5 mb-3">Проверки</h2>
         <form method="post" action="/urls/{{ site.id }}/checks">
-          <input type="submit" class="btn btn-primary" value="Запустить проверку">
+          <input type="submit" class="btn btn-primary" value="Check">
         </form>
         <div>
           <table class="table table-bordered table-hover mt-2" data-test="checks">
