--- a/page_analyzer/templates/index.html
+++ b/page_analyzer/templates/index.html
@@ -1,44 +1,29 @@
-<!doctype html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Анализатор страниц</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  </head>
-  <body>
-    <header class="header" style="background-color: #212529">
-      <nav class="navbar navbar-expand-md navbar-dark px-3">
-        <a class="navbar-brand" href="{{ url_for('get_main_page') }}">Анализатор страниц</a>
-        <div><a class="navbar-nav nav-link" href="{{ url_for('get_urls') }}">Сайты</a></div>
-      </nav>
-    </header>
-    <main>
-      <div class="container-lg mt-3">
-        <h1>Сайты</h1>
-        <div class="table-responsive">
-          <table data-test="urls" class="table table-bordered table-hover text-nowrap">
-            <thead>
-              <th>ID</th>
-              <th>Имя</th>
-              <th>Последняя проверка</th>
-              <th>Код ответа</th>
-            </thead>
-            <tbody>
-            {% for url in urls %}
-              <tr>
-                <td>{{ url.id }}</td>
-                <td><a href="{{ url_for('get_url', id=url.id) }}">{{ url.name }}</a></td>
-                <td>{% if url.created_at %}{{ url.created_at }}{% endif %}</td>
-                <td>{% if url.status_code %}{{ url.status_code }}{% endif %}</td>
-              </tr>
-            {% endfor %}
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </main>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
-  </body>
-</html>
+{% extends 'layouts/layout.html' %}
+
+{% block content %}
+
+<div class="container-lg mt-3">
+  <h1>Сайты</h1>
+  <div class="table-responsive">
+    <table data-test="urls" class="align-middle text-center table table-bordered table-hover text-nowrap">
+      <thead>
+        <th>ID</th>
+        <th>Имя</th>
+        <th>Последняя проверка</th>
+        <th>Код ответа</th>
+      </thead>
+      <tbody>
+      {% for url in urls %}
+        <tr>
+          <td>{{ url.id }}</td>
+          <td><a href="{{ url_for('get_url', id=url.id) }}">{{ url.name }}</a></td>
+          <td>{% if url.created_at %}{{ url.created_at }}{% endif %}</td>
+          <td>{% if url.status_code %}{{ url.status_code }}{% endif %}</td>
+        </tr>
+      {% endfor %}
+      </tbody>
+    </table>
+  </div>
+</div>
+      
+{% endblock %}      
