--- a/page_analyzer/templates/main.html
+++ b/page_analyzer/templates/main.html
@@ -1,43 +1,20 @@
-<!doctype html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Анализатор страниц</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  </head>
-  <body>
-    <header class="header" style="background-color: #212529">
-      <nav class="navbar navbar-expand-md navbar-dark px-3">
-        <a class="navbar-brand" href="{{ url_for('get_main_page') }}">Анализатор страниц</a>
-        <div><a class="navbar-nav nav-link" href="{{ url_for('get_urls') }}">Сайты</a></div>
-      </nav>
-    </header>
-    {% if messages %}
-    <div class="flashes">
-      {% for category, message in messages %}
-      <div class="alert alert-{{ category }}" role="alert">
-        {{ message }}
-      </div>
-      {% endfor %}
+{% extends 'layouts/layout.html' %}
+
+{% block content %}
+
+<h1></h1>
+<div class="container-lg mt-3">
+  <div class="row">
+    <div class="col-12 col-md-10 col-lg-8 mx-auto border rounded-3 bg-light p-5" style="background-color: #dee2e6">
+      <h1 class="display-3 text-center">Анализатор страниц</h1>
+      <p class="lead text-center">Бесплатно проверяйте сайты на SEO-пригодность</p>
+      <form action="{{ url_for('check_url') }}" class="d-flex justify-content-center" method="post">
+        <input type="text" class="form-control form-control-lg " name="url" placeholder="https://www.example.com">
+        <input type="submit" class="btn btn-primary  btn-lg ms-3 px-5 text-uppercase mx-3" style="background-color: #0d6efd" value="ПРОВЕРИТЬ">
+      </form>
     </div>
-    {% endif %}
-    <main>
-      <h1></h1>
-      <div class="container-lg mt-3">
-        <div class="row">
-          <div class="col-12 col-md-10 col-lg-8 mx-auto border rounded-3 bg-light p-5" style="background-color: #dee2e6">
-            <h1 class="display-3 text-center">Анализатор страниц</h1>
-            <p class="lead text-center">Бесплатно проверяйте сайты на SEO-пригодность</p>
-            <form action="{{ url_for('check_url') }}" class="d-flex justify-content-center" method="post">
-              <input type="text" class="form-control form-control-lg " name="url" placeholder="https://www.example.com">
-              <input type="submit" class="btn btn-primary  btn-lg ms-3 px-5 text-uppercase mx-3" style="background-color: #0d6efd" value="ПРОВЕРИТЬ">
-            </form>
-          </div>
-        </div>
-      </div>
-    </main>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
-  </body>
-</html>
+  </div>
+</div>
+
+{% endblock %}
+        
