--- a/page_analyzer/templates/layouts/layout.html
+++ b/page_analyzer/templates/layouts/layout.html
@@ -7,21 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
   <body>
-    <header class="header" style="background-color: #212529">
-      <nav class="navbar navbar-expand-md navbar-dark px-3">
-        <a class="navbar-brand" href="{{ url_for('get_main_page') }}">Анализатор страниц</a>
-        <div><a class="navbar-nav nav-link" href="{{ url_for('get_urls') }}">Сайты</a></div>
-      </nav>
-    </header>
-    {% if messages %}
-    <div class="flashes">
-      {% for category, message in messages %}
-      <div class="alert alert-{{ category }}" role="alert">
-        {{ message }}
-      </div>
-      {% endfor %}
-    </div>
-    {% endif %}
+    {% include 'includes/header.html' %}
+    {% include 'includes/messages.html' %}
     <main>
       {% block content %}
       {% endblock %}  
