--- a/page_analyzer/templates/includes/header.html
+++ b/page_analyzer/templates/includes/header.html
@@ -1,4 +1,4 @@
-{% block content %}
+{% block header %}
 
 <header class="header" style="background-color: #212529">
   <nav class="navbar navbar-expand-md navbar-dark px-3">
