--- a/page_analyzer/templates/errors/error.html
+++ b/page_analyzer/templates/errors/error.html
@@ -4,7 +4,7 @@
 
 <div class="row">
   <div class="col-12 col-md-10 col-lg-8 mx-auto p-5">
-    <h1>Oшибка{% if code %} {{ code }}{% endif %}</h1>
+    <h1>Oшибка{% if code %} №{{ code }}{% endif %}</h1>
     <p>{{ description }}</p>
     <div>
       <a class="btn btn-primary  btn-lg ms-3 px-5 text-uppercase mx-3" href="{{ url_for('get_main_page') }}">На главнтую</a>
