fix typo in error.html

--- a/page_analyzer/templates/errors/error.html
+++ b/page_analyzer/templates/errors/error.html
@@ -7,7 +7,7 @@
     <h1>Oшибка{% if code %} №{{ code }}{% endif %}</h1>
     <p>{{ description }}</p>
     <div>
-      <a class="btn btn-primary  btn-lg ms-3 px-5 text-uppercase mx-3" href="{{ url_for('get_main_page') }}">На главнтую</a>
+      <a class="btn btn-primary  btn-lg ms-3 px-5 text-uppercase mx-3" href="{{ url_for('get_main_page') }}">На главную</a>
       <a class="btn btn-primary  btn-lg ms-3 px-5 text-uppercase mx-3" href="{{ url_for('get_urls') }}">К списку сайтов</a>
     </div>
   </div>
